# herufi_1.1

./: README.md  herufi_dev.db  pyproject.toml  vercel.json
alembic/: env.py
alembic/versions/: 262b8635c72c_initial_schema.py
api/: index.py
app/: config.py  db.py  main.py
app/ml/: __init__.py  interface.py
app/models/: __init__.py  contact.py  insight.py  news.py  prediction.py  subscriber.py  user.py
app/routers/: admin.py  auth.py  deps.py  pages.py  public.py
app/schemas/: auth.py  contact.py  insight.py  news.py  prediction.py
app/services/: auth.py  contact.py  insights.py  news.py  predictions.py
app/templates/: base.html
app/templates/pages/: admin_dashboard.html  admin_login.html  contact.html  dashboard.html  home.html  insight_detail.html  insights.html  news.html  profile.html  track_record.html
app/templates/partials/: footer.html  nav.html  post_card.html  prediction_card.html  tag_pill.html
herufi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
